src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Donations</fullName>
        <description>used to track standard donations</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Paypal Completed</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Grant</fullName>
        <description>used to track grant application process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Grant Awarded</fullName>
        </values>
        <values>
            <fullName>Grant Completed</fullName>
        </values>
        <values>
            <fullName>Grant Denied</fullName>
        </values>
        <values>
            <fullName>Grant Prep</fullName>
        </values>
        <values>
            <fullName>Grant Submitted</fullName>
        </values>
        <values>
            <fullName>LOI</fullName>
        </values>
        <values>
            <fullName>No Response</fullName>
        </values>
        <values>
            <fullName>Not Accepting Applications</fullName>
        </values>
        <values>
            <fullName>Outside of Guidelines</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Historical Import</fullName>
        <description>Restricted list of stages for historical imports</description>
        <isActive>true</isActive>
        <values>
            <fullName>Attended</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Major Gift</fullName>
        <description>used to track major gift initiative</description>
        <isActive>true</isActive>
        <values>
            <fullName>Ask - Denied</fullName>
        </values>
        <values>
            <fullName>Engaged with Organization</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualified Interest</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Master</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Not Posted</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Overnight Conventions</fullName>
        <description>Used for overnight convention opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Application Started</fullName>
        </values>
        <values>
            <fullName>C%3A Complete</fullName>
        </values>
        <values>
            <fullName>Cancelled - After Accept %28No Pmt%29</fullName>
        </values>
        <values>
            <fullName>Cancelled - Fully Pd</fullName>
        </values>
        <values>
            <fullName>Cancelled - Part%2E Pmt%2E</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Drop - Not Yet Accepted</fullName>
        </values>
        <values>
            <fullName>I%3A Intent</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>S%3A Serious</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Summer Program</fullName>
        <description>Used for summer program opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Application Started</fullName>
        </values>
        <values>
            <fullName>C%3A Complete</fullName>
        </values>
        <values>
            <fullName>Cancelled - After Accept %28No Pmt%29</fullName>
        </values>
        <values>
            <fullName>Cancelled - Fully Pd</fullName>
        </values>
        <values>
            <fullName>Cancelled - Part%2E Pmt%2E</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Deferred</fullName>
        </values>
        <values>
            <fullName>Drop - Not Yet Accepted</fullName>
        </values>
        <values>
            <fullName>I%3A Inactive</fullName>
        </values>
        <values>
            <fullName>I%3A Intent</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>S%3A Serious</fullName>
        </values>
        <values>
            <fullName>S%3A Stuck</fullName>
        </values>
        <values>
            <fullName>T%3A Teacher Rec Missing</fullName>
        </values>
        <values>
            <fullName>Under review</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Ticketed Event</fullName>
        <description>RSVP process for ticketed events</description>
        <isActive>true</isActive>
        <values>
            <fullName>Application Started</fullName>
        </values>
        <values>
            <fullName>Attend - No Charge</fullName>
        </values>
        <values>
            <fullName>Cancelled - Fully Pd</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Invited</fullName>
        </values>
        <values>
            <fullName>No</fullName>
        </values>
        <values>
            <fullName>Yes</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Academics_Complete__c</fullName>
        <formula>IF (AND (Current_Secondary_School__c&lt;&gt;&quot;&quot;, Reference_Teacher_Name__c&lt;&gt;&quot;&quot;, Reference_Teacher_Email__c&lt;&gt;&quot;&quot;),&quot;True&quot;, &quot;False&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please complete all fields under the Academics tab above. After all information has been filled in and verified, this step will be shown as complete.</inlineHelpText>
        <label>Academics Section Complete?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acceptance_Status__c</fullName>
        <formula>CASE(StageName,
&quot;Application Started&quot;, &quot;Application Incomplete&quot;,
&quot;I: Intent&quot;, &quot;Application Incomplete&quot;,
&quot;S: Serious&quot;, &quot;Application Incomplete&quot;,
&quot;S: Stuck&quot;, &quot;Application Incomplete&quot;,
&quot;Under Review&quot;, &quot;Under Review&quot;,
&quot;C: Complete&quot;, &quot;Under Review&quot;,
&quot;Accepted&quot;, &quot;ACCEPTED&quot;,
&quot;Rejected&quot;, &quot;Application Closed&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Applications with the following statuses cannot be edited: Under Review, Accepted, or Closed.</inlineHelpText>
        <label>Acceptance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applied_Amount__c</fullName>
        <description>Applied amount from all invoices.</description>
        <label>Applied Amount</label>
        <summarizedField>QB_Invoice__c.Applied_Amount__c</summarizedField>
        <summaryForeignKey>QB_Invoice__c.OpportunityID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Assign_Room__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Individual has either paid (if there is a charge), or we have received a purchase order.</inlineHelpText>
        <label>Assign Room?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_A_Section__c</fullName>
        <inlineHelpText>Section for Course A</inlineHelpText>
        <label>Assigned Course A Section</label>
        <picklist>
            <picklistValues>
                <fullName>Freshman Scholars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_B_Section__c</fullName>
        <inlineHelpText>Assigned section for Course B.  Leave blank if not applicable.</inlineHelpText>
        <label>Assigned Course B Section</label>
        <picklist>
            <picklistValues>
                <fullName>Freshman Scholars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_Course_A__c</fullName>
        <label>Assigned Course A</label>
        <picklist>
            <picklistValues>
                <fullName>AP U.S. Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Macroeconomics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constitutional Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speech and Political Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>War and Diplomacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media and Politics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP U.S. History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freshman Scholars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modern Chinese History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Presidency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_Course_B__c</fullName>
        <label>Assigned Course B</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Speech Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese Language</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campus_Session_Text_Historical__c</fullName>
        <description>This field is only used for archived events, which are either imported from Netforum or entered from historical data.  Do not use this for current year reports.</description>
        <inlineHelpText>This field is only used for archived events, which are either imported from Netforum or entered from historical data.  Do not use this for current year reports.</inlineHelpText>
        <label>Campus/Session (Text/Historical)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus_Session__c</fullName>
        <inlineHelpText>Please select your first choice campus and session.</inlineHelpText>
        <label>Campus/Session</label>
        <picklist>
            <picklistValues>
                <fullName>JSA Diplomat Program, China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer School at Princeton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer School at University of Virginia (APUSH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer School at Stanford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer School at Georgetown - Session II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer School at Georgetown - Session I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <inlineHelpText>Marketing channel indicating where the student first heard about JSA.</inlineHelpText>
        <label>Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Email address of the primary contact for this opportunity (based on the Primary Contact custom field)</description>
        <formula>Primary_Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convention_Id__c</fullName>
        <label>Convention Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convention__c</fullName>
        <label>Convention Location</label>
        <picklist>
            <picklistValues>
                <fullName>Northern California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern California - Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern California - Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohio River Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_A_Decile__c</fullName>
        <label>Course A Decile</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_A_Raw__c</fullName>
        <label>Course A Raw</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_A__c</fullName>
        <inlineHelpText>Choose one class from the list.</inlineHelpText>
        <label>Course Selection</label>
        <picklist>
            <controllingField>Campus_Session__c</controllingField>
            <picklistValues>
                <fullName>AP U.S. Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constitutional Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP U.S. History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freshman Scholars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Macroeconomics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media and Politics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speech &amp; Political Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSA Diplomat Progam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Presidency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_B_Decile__c</fullName>
        <label>Course B Decile</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_B_Raw__c</fullName>
        <label>Course B Raw</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_B__c</fullName>
        <inlineHelpText>At Princeton you also must choose one speech or communication class, unless you are in the Freshman Scholars program.</inlineHelpText>
        <label>Course B</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Speech Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political Communication</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_Selection_Text_Import__c</fullName>
        <description>This field is only used for archived events, which are either imported from Netforum or entered from historical data.  Do not use this for current year reports.</description>
        <inlineHelpText>This field is only used for archived events, which are either imported from Netforum or entered from historical data.  Do not use this for current year reports.</inlineHelpText>
        <label>Course Selection (Text/Import)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cumulative_GPA__c</fullName>
        <inlineHelpText>Please enter your cumulative high school GPA, as of your latest report card.  Round to one decimal point (for example, 3.8 or 4.0).</inlineHelpText>
        <label>Cumulative GPA</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Secondary_School__c</fullName>
        <inlineHelpText>Enter the name of the high school or secondary school that you currently attend. If you are home schooled, enter &quot;Home School.&quot;</inlineHelpText>
        <label>School Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_Text__c</fullName>
        <description>Used for template merges.</description>
        <formula>CASE(Campus_Session__c ,
  &quot;Summer School at Princeton&quot;, &quot;Jaime Contreras&quot;, 
  &quot;Summer School at Stanford&quot;, &quot;Steve Bayne&quot;,
  &quot;Summer School at Georgetown - Session I&quot;, &quot;Tracy Thomas&quot;,
  &quot;Summer School at Georgetown - Session II&quot;, &quot;Elizabeth Ventura&quot;,
  &quot;Summer School at University of Virginia (APUSH)&quot;, &quot;Jeff Dunn&quot;,
  &quot;JSA Diplomat Program, China&quot;, &quot;Larry Guillemette&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donor_Type__c</fullName>
        <label>Donor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Director/Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization/Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business/Corporation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extracurricular_Activities__c</fullName>
        <description>Please see the Application Instructions under the Quick Links menu. We recommend that you write and check your essay using a word processing program, then paste the entire essay here.  When you are satisfied with your essays, click &quot;Submit&quot; and &quot;Update.&quot;</description>
        <inlineHelpText>Please see the Application Instructions under the Quick Links menu. We recommend that you write and check your essay using a word processing program, then paste the entire essay here.  When you are satisfied with your essays, click &quot;Submit&quot; and &quot;Update.&quot;</inlineHelpText>
        <label>Extracurricular Activities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Facebook_Group__c</fullName>
        <description>URL to the facebook group for the campus/session.  Used for email merges.</description>
        <formula>CASE(Campus_Session__c ,
&quot;Princeton Summer School&quot;, &quot;http://www.facebook.com/group.php?gid=61449766576&quot;,
&quot;Stanford Summer School&quot;, &quot;http://www.facebook.com/group.php?gid=42532362998&quot;,
&quot;Yale Summer School&quot;, &quot;http://www.facebook.com/group.php?gid=60009776180&quot;,
&quot;Georgetown I Summer School&quot;, &quot;http://www.facebook.com/group.php?gid=36225197377&quot;,
&quot;Georgetown II Summer School&quot;, &quot;http://www.facebook.com/group.php?gid=55293478407&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facebook Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Pay__c</fullName>
        <description>Has been invoiced and balance due is zero.</description>
        <formula>IF( AND( Invoice_Count__c = 1,  Remaining_Balance__c &lt;= 0) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fundraising_Academy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fundraising Academy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>CASE( Primary_Contact__r.Gender__c , &quot;Male&quot;, &quot;Male&quot;, &quot;Female&quot;, &quot;Female&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Chapter or other group that the individual registration is associated with.</description>
        <inlineHelpText>Chapter or other group that the individual registration is associated with.</inlineHelpText>
        <label>Group</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Individual Registrants</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HS_Grad_Year__c</fullName>
        <description>High school graduation year from &quot;primary&quot; contact.  Used in reports and mail merges.</description>
        <formula>Primary_Contact__r.High_School_Graduation_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student HS Grad Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Chapter__c</fullName>
        <formula>Primary_Contact__r.High_School__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>School that the student attends (from the Contact profile).</inlineHelpText>
        <label>High School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Honor_Student_Code__c</fullName>
        <description>Mailing list code.</description>
        <inlineHelpText>If there is an Honor Student Code near the address box on the brochure or mailing that you received, please enter it here.</inlineHelpText>
        <label>Honor Student Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_Chapter_ID__c</fullName>
        <formula>ocHigh_School__r.School_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Chapter ID of the host chapter.</inlineHelpText>
        <label>Host Chapter ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_Chapter_ZIP__c</fullName>
        <formula>LEFT( ocHigh_School__r.ZIP__c , 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>5-digit ZIP of the high school associated with this opportunity.</inlineHelpText>
        <label>Host Chapter ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_you_learn_about_us__c</fullName>
        <inlineHelpText>How did you learn about the Junior Statesmen Summer Programs? Please indicate the most relevant option from the choices below.</inlineHelpText>
        <label>How did you learn about the program?</label>
        <picklist>
            <picklistValues>
                <fullName>I saw an advertisement online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m a JSA member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From a friend or relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From a teacher or counselor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I received an email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I received a mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I attended a previous summer school</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer Search organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Card_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has a copy of the student&apos;s insurance card been received along with the medical forms?</inlineHelpText>
        <label>Insurance Card Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internet_Fee_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this is we have received payment for the summer school internet usage fee.</inlineHelpText>
        <label>Internet Fee Paid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Count__c</fullName>
        <description>The number of invoices that were issued against this opportunity/sales order.</description>
        <inlineHelpText>The number of invoices that were issued against this opportunity/sales order.</inlineHelpText>
        <label>Invoice Count</label>
        <summaryForeignKey>QB_Invoice__c.OpportunityID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether or not the opportunity will be an invoice in QuickBooks.</description>
        <inlineHelpText>Check this if the opportunity is to immediately become an invoice when it is sent to QuickBooks.  Unchecked opportunities will become sales orders when sent to QuickBooks.  NOTE: All products on the opportunity should be FINAL before you check this box.</inlineHelpText>
        <label>Immediate Invoice?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSA_Role__c</fullName>
        <formula>CASE( Primary_Contact__r.JSA_Role__c , 
&quot;Chapter President&quot;, &quot;Chapter President&quot;, 
&quot;Student&quot;, &quot;Student&quot;,
&quot;Chapter Officer&quot;, &quot;Chapter Officer&quot;,
&quot;JSA Advisor&quot;, &quot;JSA Advisor&quot;,
&quot;JSA Affiliate&quot;, &quot;JSA Affiliate&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JSA Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSA_Scholar_Code__c</fullName>
        <formula>CASE(Primary_Contact__r.JSA_Scholar_Code__c, &quot;Summer Returner&quot;, &quot;Summer Returner&quot;, &quot;JSA Scholar&quot;, &quot;JSA Scholar&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JSA Scholar Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSA_State__c</fullName>
        <formula>Primary_Contact__r.JSA_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>JSA State abbreviation, based on JSA State from Primary Contact Link.</inlineHelpText>
        <label>JSA State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Credit_Date__c</fullName>
        <description>The last date a credit was received for this order&apos;s invoice.</description>
        <inlineHelpText>The last date a credit was received for this order&apos;s invoice.</inlineHelpText>
        <label>Last Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <description>The last date a payment was received for this order&apos;s invoice.</description>
        <inlineHelpText>The last date a payment was received for this order&apos;s invoice.</inlineHelpText>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Likelihood_of_Attending__c</fullName>
        <inlineHelpText>After speaking with a parent, staff assessment of likelihood of attendance for Accepted student.</inlineHelpText>
        <label>Likelihood of Attending</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Will attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Not likely to attend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MACleanCity__c</fullName>
        <label>Clean City (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanCountry__c</fullName>
        <label>Clean Country (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanCounty__c</fullName>
        <label>Clean County (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanDistrict__c</fullName>
        <label>Clean District (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanPostalCode__c</fullName>
        <label>Clean Postal Code (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanState__c</fullName>
        <label>Clean State (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>